--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -43,7 +43,9 @@ body {
   background-color: #0A0A0A;
   color: #F7F7F7;
   overflow-x: hidden;
-  padding: 2rem;
+  padding: 0;
+  padding-top: 2rem;
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -94,6 +96,28 @@ body {
 
 main {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cta-primary {
+  border-radius: 256px;
+  height: 48px;
+  width: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #0A0A0A;
+  font-family: "Inter Medium";
+  font-size: 0.9375rem;
+  text-decoration: none;
+  background: transparent linear-gradient(211deg, #B87C1D 0%, #EAC666 45%, #EAC666 100%) 0% 0% no-repeat padding-box;
+}
+
+.cta-primary:hover {
+  transform: scale(1.1);
+  transition: transform 0.2s ease-in-out;
 }
 
 #hero {
@@ -281,25 +305,6 @@ main {
   gap: 24px;
 }
 
-.info .cta-primary {
-  border-radius: 256px;
-  height: 48px;
-  width: 160px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #0A0A0A;
-  font-family: "Inter Medium";
-  font-size: 0.9375rem;
-  text-decoration: none;
-  background: transparent linear-gradient(211deg, #B87C1D 0%, #EAC666 45%, #EAC666 100%) 0% 0% no-repeat padding-box;
-}
-
-.info .cta-primary:hover {
-  transform: scale(1.1);
-  transition: transform 0.2s ease-in-out;
-}
-
 .info .cta-secondary {
   height: 48px;
   width: 200px;
@@ -378,9 +383,98 @@ main {
 }
 
 #featured-products {
-  max-width: 1536px;
   margin-top: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  z-index: 3;
+  background-image: url("../images/formula-bottom.svg");
+  background-repeat: no-repeat;
+  background-position: 45vw 45vh;
+  background-size: 120%;
+  width: 100%;
+}
+
+#featured-products .featured-products-content {
+  max-width: 1536px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 0rem;
+}
+
+#featured-products h3 {
+  font-family: "Gilmer Regular";
+  font-size: 1.5rem;
+  color: #F7F7F7;
+  margin: 0;
+  font-weight: 200;
+  margin-bottom: 1rem;
+}
+
+#featured-products h2 {
+  font-family: "Gilmer Regular";
+  font-size: 3.5rem;
+  font-weight: 200;
+  color: #EAC666;
+  margin: 0;
+  margin-top: 8px;
+  margin-bottom: 6rem;
+}
+
+#featured-products .products-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 8px;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 8rem;
+}
+
+#featured-products .product-card {
+  flex: 1;
+  background-color: #000000;
+  border-radius: 8px;
+  border: 1px solid #1D1D1D;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 32px;
+}
+
+#featured-products .product-card img {
+  width: 264px;
+  height: auto;
+}
+
+#featured-products .product-card h4 {
+  font-size: 2rem;
+  color: #F7F7F7;
+  font-family: "Gilmer Regular";
+  font-weight: 200;
+  margin: 0;
+  margin-top: 32px;
+}
+
+#featured-products .product-card h5 {
+  font-size: 1rem;
+  color: #EAC666;
+  font-family: "Inter Regular";
+  margin: 1rem 0;
+}
+
+#featured-products .product-card .year {
+  font-size: 1rem;
+  color: #FFFFFF;
+  font-family: "Inter Regular";
+  margin: 0;
+}
+
+#featured-products .product-card .cta-primary {
+  width: 253px;
+  margin-top: 32px;
 }
