--- a/assets/styles/scroller.scss
+++ b/assets/styles/scroller.scss
@@ -1,7 +1,7 @@
 .scroll-nav {
   position: fixed;
-  right: 8%;
-  top: 20%;
+  right: 2rem;
+    top: 35%;
   transform: translateY(-50%);
   z-index: 1000;
 
